# impulse-vectorized

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
cmake/: FindMKL.cmake
cmake/modules/: FindMKL.cmake
data/: ex4weights_1.txt  ex4weights_2.txt  mnist_test_1000.csv  test.csv  test1_x.csv  test1_x_2.csv
src/Impulse/: common.h  types.h
src/Impulse/NeuralNetwork/: Builder.cpp  Builder.h  Network.cpp  Network.h  NetworkSerializer.h  Serializer.cpp  Serializer.h  common.h  include.h  utils.cpp  utils.h
src/Impulse/NeuralNetwork/Builder/: Abstract.cpp  Abstract.h  Builder.h  ClassifierBuilder.cpp  ClassifierBuilder.h  ConvBuilder.cpp  ConvBuilder.h
src/Impulse/NeuralNetwork/Layer/: Abstract.cpp  Abstract.h  Abstract1D.cpp  Abstract1D.h  Abstract2D.cpp  Abstract2D.h  Abstract3D.cpp  Abstract3D.h  ActivationFunction.h  Conv.cpp  Conv.h  Derivative.h  FullyConnected.cpp  FullyConnected.h  Input.h  Logistic.cpp  Logistic.h  MaxPool.cpp  MaxPool.h  Pool.cpp  Pool.h  Purelin.cpp  Purelin.h  Relu.cpp  Relu.h  Sigmoid.h  Softmax.cpp  Softmax.h
src/Impulse/NeuralNetwork/Layer/BackPropagation/: Abstract.h  BackPropagation1DTo1D.cpp  BackPropagation1DTo1D.h  BackPropagation3DTo1D.cpp  BackPropagation3DTo1D.h  BackPropagationEmpty.cpp  BackPropagationEmpty.h  BackPropagationToConv.cpp  BackPropagationToConv.h  BackPropagationToMaxPool.cpp  BackPropagationToMaxPool.h  BackPropagationToPool.cpp  BackPropagationToPool.h  Factory.cpp
src/Impulse/NeuralNetwork/Math/: Fmincg.cpp  Fmincg.h  Matrix.cpp  Matrix.h  Vector.h  common.cpp  common.h  types.h
src/Impulse/NeuralNetwork/Math/Minimizer/: Fmincg.cpp  Fmincg.h
src/Impulse/NeuralNetwork/Network/: Abstract.cpp  Abstract.h
src/Impulse/NeuralNetwork/Trainer/: Abstract.cpp  Abstract.h  AbstractTrainer.cpp  AbstractTrainer.h  BatchGradientDescentTrainer.h  CojungateGradientTrainer.cpp  CojungateGradientTrainer.h  ConjugateGradient.cpp  ConjugateGradient.h  ConjugateGradientTrainer.cpp  ConjugateGradientTrainer.h  GradientDescent.cpp  GradientDescent.h  MiniBatchGradientDescent.cpp  MiniBatchGradientDescent.h  common.h  types.h
tmp/: speed.txt
